recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:28: error: not found: value snowSide
      snowSide(levels-1,length/2)
      ^SquareKoch:30: error: not found: value snowSide
      snowSide(levels-1,length/2)
      ^